--- a/src/gpu/CMakeLists.txt
+++ b/src/gpu/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(v3_1 ImplicitGEMM_v3_1.cu)
 add_executable(v3_2 ImplicitGEMM_v3_2.cu)
 add_executable(v4 ImplicitGEMM_v4.cu)
 add_executable(v5 ImplicitGEMM_v5.cu)
+add_executable(v6 ImplicitGEMM_v6.cu)
